--- a/index.html
+++ b/index.html
@@ -2,44 +2,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ExpireTrace</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ExpireTrace</title>
+  <link rel="stylesheet" href="css/style.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet"/>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="logo">ExpireTrace</div>
-            <nav>
-                <ul>
-                    <li>Features</li>
-                    <li>Pricing</li>
-                    <li>Support</li>
-                    <li><button class="cta">Start Free</button></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <section class="hero">
-        <div class="container">
-            <div class="hero-text">
-                <h1>The smartest way to track expirations</h1>
-                <p>Stay ahead of renewals, avoid surprises, and manage your IT and business assets like a pro.</p>
-                <button class="cta">Start Free</button>
-            </div>
-            <div class="hero-img">
-                <img src="images/hero-placeholder.png" alt="ExpireTrace dashboard preview">
-            </div>
-        </div>
-    </section>
-    <section class="what-is">
-        <div class="container">
-            <h2>What is ExpireTrace?</h2>
-            <p>ExpireTrace is your intelligent assistant for tracking expiration dates of software licenses, contracts, warranties, and more. Never miss a deadline again.</p>
-        </div>
-    </section>
+  <header class="nav">
+    <h1 class="logo">ExpireTrace</h1>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#" class="btn">Start Free</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="hero">
+    <h2>The smartest way to track expirations</h2>
+    <p>Stay ahead of renewals, avoid surprises, and manage your IT and business assets like a pro.</p>
+    <a href="#" class="btn">Start Free</a>
+    <img src="images/dashboard-preview.png" alt="ExpireTrace dashboard preview"/>
+  </main>
+
+  <section class="info">
+    <h3>What is ExpireTrace?</h3>
+    <p>ExpireTrace is your intelligent assistant for tracking expiration dates of software licenses, contracts, warranties, and more. Never miss a deadline again.</p>
+  </section>
 </body>
 </html>
